{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 35,
  "lineage": "230068bb-a502-7b03-bac0-e10efa930bb2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-041d2f256feb8bd45",
            "domain": "vpc",
            "id": "eipalloc-0b1023738036f1590",
            "network_interface": "eni-0a91693fb425147ef",
            "private_dns": "ip-10-0-1-141.us-east-2.compute.internal",
            "private_ip": "10.0.1.141",
            "public_dns": "ec2-3-136-111-144.us-east-2.compute.amazonaws.com",
            "public_ip": "3.136.111.144",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "serverless-rds-internet-dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dd66b329fe9dacb7",
            "arn": "arn:aws:ec2:us-east-2:668221711955:instance/i-0b1af8484f6a32be7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b1af8484f6a32be7",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "geoffpersonal_us_east_2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-048d5f49329e6b407",
            "private_dns": "ip-10-0-1-185.us-east-2.compute.internal",
            "private_ip": "10.0.1.185",
            "public_dns": "ec2-3-15-137-200.us-east-2.compute.amazonaws.com",
            "public_ip": "3.15.137.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 300,
                "kms_key_id": "arn:aws:kms:us-east-2:668221711955:key/5ebfc1e1-d312-45b1-8846-0d47d03fec91",
                "volume_id": "vol-0df28c1f5130923fa",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f50257b8c0f471d0",
            "tags": {
              "Name": "serverless-rds-internet-dev-bastion-host"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04db22079c80cefdb"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh",
            "aws_subnet.public",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:668221711955:internet-gateway/igw-0df78f1e0c777820d",
            "id": "igw-0df78f1e0c777820d",
            "owner_id": "668221711955",
            "tags": {
              "Name": "serverless-rds-internet-dev"
            },
            "vpc_id": "vpc-0213efa3d9a9e5528"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b1023738036f1590",
            "id": "nat-0e5ecc44ef6cfa1c3",
            "network_interface_id": "eni-0a91693fb425147ef",
            "private_ip": "10.0.1.141",
            "public_ip": "3.136.111.144",
            "subnet_id": "subnet-0f50257b8c0f471d0",
            "tags": {
              "Name": "serverless-rds-internet-dev"
            }
          },
          "dependencies": [
            "aws_eip.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:668221711955:network-acl/acl-0e7a1181e961cddfa",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e7a1181e961cddfa",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "owner_id": "668221711955",
            "subnet_ids": [
              "subnet-06c9cefae59d0f0a4",
              "subnet-0d4bfeb93f96e3b41"
            ],
            "tags": {
              "Name": "serverless-rds-internet-dev-acl"
            },
            "vpc_id": "vpc-0213efa3d9a9e5528"
          },
          "dependencies": [
            "aws_subnet.private_1",
            "aws_subnet.private_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-082a0e7a6d832a08b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e5ecc44ef6cfa1c3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-082a0e7a6d832a08b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_nat_gateway.main",
            "aws_route_table.private_lambda"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0df78f1e0c777820d",
            "id": "r-rtb-0c5e3348c81941e711080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c5e3348c81941e71",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-082a0e7a6d832a08b",
            "owner_id": "668221711955",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e5ecc44ef6cfa1c3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "serverless-rds-internet-dev-private-lambda"
            },
            "vpc_id": "vpc-0213efa3d9a9e5528"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c5e3348c81941e71",
            "owner_id": "668221711955",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0df78f1e0c777820d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "serverless-rds-internet-dev-public"
            },
            "vpc_id": "vpc-0213efa3d9a9e5528"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be4e1dc989cf2155",
            "route_table_id": "rtb-082a0e7a6d832a08b",
            "subnet_id": "subnet-06c9cefae59d0f0a4"
          },
          "dependencies": [
            "aws_route_table.private_lambda",
            "aws_subnet.private_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016cc46c8d3dbd1f6",
            "route_table_id": "rtb-082a0e7a6d832a08b",
            "subnet_id": "subnet-0d4bfeb93f96e3b41"
          },
          "dependencies": [
            "aws_route_table.private_lambda",
            "aws_subnet.private_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4da1ba14696ea54",
            "route_table_id": "rtb-082a0e7a6d832a08b",
            "subnet_id": "subnet-0c8a3e434ee11c477"
          },
          "dependencies": [
            "aws_route_table.private_lambda",
            "aws_subnet.private_3",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d143a6f48a40b5be",
            "route_table_id": "rtb-0c5e3348c81941e71",
            "subnet_id": "subnet-0f50257b8c0f471d0"
          },
          "dependencies": [
            "aws_route_table.public_subnet",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:668221711955:security-group/sg-0b305cc3c7937fd45",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b305cc3c7937fd45",
            "ingress": [],
            "name": "serverless-rds-internet-dev-lambda-sg",
            "name_prefix": "",
            "owner_id": "668221711955",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0213efa3d9a9e5528"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:668221711955:security-group/sg-0553c984f61017e71",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0553c984f61017e71",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04db22079c80cefdb",
                  "sg-0b305cc3c7937fd45"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "serverless-rds-internet-dev-rds-sg",
            "name_prefix": "",
            "owner_id": "668221711955",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0213efa3d9a9e5528"
          },
          "dependencies": [
            "aws_security_group.lambda",
            "aws_security_group.ssh",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:668221711955:security-group/sg-04db22079c80cefdb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04db22079c80cefdb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "serverless-rds-internet-dev-bastion-sg",
            "name_prefix": "",
            "owner_id": "668221711955",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0213efa3d9a9e5528"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:668221711955:subnet/subnet-06c9cefae59d0f0a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-06c9cefae59d0f0a4",
            "map_public_ip_on_launch": false,
            "owner_id": "668221711955",
            "tags": {
              "Name": "serverless-rds-internet-dev-private-1"
            },
            "vpc_id": "vpc-0213efa3d9a9e5528"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:668221711955:subnet/subnet-0d4bfeb93f96e3b41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0d4bfeb93f96e3b41",
            "map_public_ip_on_launch": false,
            "owner_id": "668221711955",
            "tags": {
              "Name": "serverless-rds-internet-dev-private-2"
            },
            "vpc_id": "vpc-0213efa3d9a9e5528"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:668221711955:subnet/subnet-0c8a3e434ee11c477",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0c8a3e434ee11c477",
            "map_public_ip_on_launch": false,
            "owner_id": "668221711955",
            "tags": {
              "Name": "serverless-rds-internet-dev-private-3"
            },
            "vpc_id": "vpc-0213efa3d9a9e5528"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:668221711955:subnet/subnet-0f50257b8c0f471d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f50257b8c0f471d0",
            "map_public_ip_on_launch": false,
            "owner_id": "668221711955",
            "tags": {
              "Name": "serverless-rds-internet-dev-public"
            },
            "vpc_id": "vpc-0213efa3d9a9e5528"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:668221711955:vpc/vpc-0213efa3d9a9e5528",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01edb3bd797626213",
            "default_route_table_id": "rtb-0200f825617d403cd",
            "default_security_group_id": "sg-011acb798e1e89df6",
            "dhcp_options_id": "dopt-22c0004b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0213efa3d9a9e5528",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0200f825617d403cd",
            "owner_id": "668221711955",
            "tags": {
              "Name": "serverless-rds-internet-dev"
            }
          }
        }
      ]
    }
  ]
}